# flipper-fuzzer

./: .gitignore  README.md  spec.md  task-esp32.md  task-esp8266.md  task-flipper.md  task-raspberrypi.md
.github/workflows/: host-tests.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/fenster/: charter.md  history.md
.squad/agents/hockney/: charter.md  history.md
.squad/agents/keaton/: charter.md  history.md
.squad/agents/mcmanus/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-07-18T16-52-24Z-live-chaff-prep.md  2026-07-18T21-20-35Z-esp32-flash.md  2026-07-18T21-45Z-esp32-handshake-verify.md
.squad/orchestration-log/: 2026-07-18T16-52-24Z-fenster.md  2026-07-18T16-52-24Z-mcmanus.md  2026-07-18T21-20-35Z-fenster.md  2026-07-18T21-45Z-fenster.md
esp32/fluckflock_companion/: README.md  platformio.ini
esp32/fluckflock_companion/disposableesp32/: CMakeLists.txt  Kconfig.projbuild  ble_adv.c  ble_adv.h  config.c  config.h  console_cfg.c  console_cfg.h  dedupe.c  dedupe.h  fluckflock_main.c  identity_gen.c  identity_gen.h  ssid_words.c  ssid_words.h  status_led.c  status_led.h  wifi_beacon.c  wifi_beacon.h
esp32/fluckflock_companion/src/: main.cpp
flipperzero/fluckflock/: application.fam  chaff_engine.c  chaff_engine.h  fluckflock.c  fluckflock.h
test/: Makefile  test_identifiers.c  test_prng.c  test_util.h  test_wifi_proto.c
(+22 files in other folders)
